--- a/style.css
+++ b/style.css
@@ -33,38 +33,57 @@ nav.nav_bar li a:hover {
 
 p {
     max-width: 600px;
-    margin: 30px 30px 30px 30px;
+    padding: 5px 30px 5px 30px;
     font-size: 16px;
 }
 
 p.math {
     max-width: 800px;
-    margin: 30px 30px 30px 30px;
+    padding: 5px 30px 5px 30px;
     font-size: 16px;
 }
 
+p.ht {
+    max-width: 1000px;
+    padding: 5px 30px 5px 30px;
+    font-size: 18px;
+}
+
 h2, h3 {
-    margin: 20px 30px 20px 30px;
+    padding: 5px 30px 5px 30px;
 }
 
 dl, ol {
     max-width: 800px;
-    margin: 30px 30px 30px 30px;
+    padding: 5px 30px 5px 30px;
     font-size: 16px;
 }
 
+
 footer {
-    bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .float_right {
     float: right;
-    margin-top: 20px;
-    margin-left: 80px;
-    margin-right: 80px;
+    padding-top: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-bottom: 20px;
 }
 
 .float_right figcaption {
     text-align: center;
     color: dimgrey;
+}
+
+.container {
+    align-items: center; 
+    float: left;
+    padding-bottom: 30px;
+}
+
+.image {
+    float: left;
+    padding-left: 100px;
 }
